--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ tradingview-ta = "==3.2.3"
 psycopg2-binary = "==2.8.6"
 aiohttp = "==3.7.4"
 PyYAML = "==5.4.1"
+sklearn = "*"
+pandas = "*"
 
 [dev-packages]
 
